--- a/css/download.css
+++ b/css/download.css
@@ -539,6 +539,9 @@ footer div:nth-of-type(2) ul li a{
         padding: 5%;
         font-size:0.8em;
     }
+    .box .tab-con table tr td{
+        padding:1%;
+    }
     footer div:nth-of-type(1){
         display:block;
         text-align:center;
