--- a/css/index.css
+++ b/css/index.css
@@ -286,9 +286,8 @@ header .header_wrap{
 /* -------------------------- container ----------------------- */
 
 .container{
-    width:100%;
     background:url('../img/bg_background7.jpg')no-repeat;
-    background-size:cover;
+    background-size:100% 100vh;
     background-attachment: fixed;
 }
 /* --------------------- faction -------------------------------- */
