--- a/css/index.css
+++ b/css/index.css
@@ -312,6 +312,16 @@ header .header_wrap{
 .text{
     width:60%;
     margin-top:10%;
+    display:none;
+}
+.text.active{
+    display:block;
+    opacity:0;
+    transition:.5s;
+}
+.text.show{
+    opacity:1;
+    transition:.5s
 }
 .imgWrap{
     width:40%;
@@ -327,6 +337,29 @@ header .header_wrap{
     padding:5%;
     margin:5%;
     background-color:rgba(50,66,81,.7);
+    display:none;
+}
+.imgWrap figure:nth-of-type(1){
+    transition-delay:1s;
+}
+.imgWrap figure:nth-of-type(2){
+    transition-delay:1.2s;
+}
+.imgWrap figure:nth-of-type(3){
+    transition-delay:1.4s;
+}
+.imgWrap figure:nth-of-type(4){
+    transition-delay:1.6s;
+}
+.imgWrap figure.active{
+    opacity:0;
+    display:block;
+    transition:.5s;
+}
+.imgWrap figure.show{
+    opacity:1;
+    margin:5%;
+    transition:.5s;
 }
 .imgWrap figure img{
     width:120px;
